Bug 1689912 - Reset aState.mHasRenderedLegend for the entire ConstructFieldSetFrame.  r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D103607